--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <header>
-      <a href="/home.html">
+      <a href="/index.html">
         <img
           src="/img/wwjlogo.png"
           alt="Winning with Jesus Logo"
