--- a/about.html
+++ b/about.html
@@ -9,11 +9,15 @@
     initial-scale=1.0"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/vbp8mif.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/thb8axx.css" />
   </head>
 
   <body>
     <header>
-      <a href="home.html"
+      <div class="header-white"></div>
+      <div class="header-gold"></div>
+      <a href="index.html"
         ><img
           src="/img/wwjlogo.png"
           alt="Winning with Jesus Logo"
