--- a/index.html
+++ b/index.html
@@ -15,21 +15,26 @@
 
   <body>
     <header>
-      <a href="/index.html">
-        <img
-          src="/img/wwjlogo.png"
-          alt="Winning with Jesus Logo"
-          height="10%"
-          width="10%"
-      /></a>
-      <img
-        class="imgtitle"
-        src="/img/winningwithjesus.png"
-        alt="Winning with Jesus with cross as the T"
-      />
-      <a class="tabs" href="about.html">About</a>
-      <a class="tabs" href="events.html">Events</a>
-      <a class="tabs" href="merchdonate.html">Merch/Donate</a>
+      <div class="header-white">
+        <div class="logo-container">
+          <a href="/index.html">
+            <img
+              src="/img/wwjlogo.png"
+              alt="Winning with Jesus Logo"
+              class="logo"
+            />
+          </a>
+          <img
+            class="imgtitle"
+            src="/img/winningwithjesus.png"
+            alt="Winning with Jesus with cross as the T"
+          />
+        </div>
+        <a class="tabs" href="about.html">About</a>
+        <a class="tabs" href="events.html">Events</a>
+        <a class="tabs" href="merchdonate.html">Merch/Donate</a>
+      </div>
+      <div class="header-gold"></div>
       <h3 class="title">A New Athlete: Sports Through Christianity</h3>
     </header>
 
