--- a/merchdonate.html
+++ b/merchdonate.html
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <a href="home.html"
+      <a href="index.html"
         ><img
           src="/img/wwjlogo.png"
           alt="Winning with Jesus Logo"
