--- a/about.html
+++ b/about.html
@@ -15,19 +15,27 @@
 
   <body>
     <header>
-      <div class="header-white"></div>
+      <div class="header-white">
+        <div class="logo-container">
+          <a href="/index.html">
+            <img
+              src="/img/wwjlogo.png"
+              alt="Winning with Jesus Logo"
+              class="logo"
+            />
+          </a>
+          <img
+            class="imgtitle"
+            src="/img/winningwithjesus.png"
+            alt="Winning with Jesus with cross as the T"
+          />
+        </div>
+        <a class="tabs" href="../about.html">About</a>
+        <a class="tabs" href="events.html">Events</a>
+        <a class="tabs" href="merchdonate.html">Merch/Donate</a>
+      </div>
       <div class="header-gold"></div>
-      <a href="index.html"
-        ><img
-          src="/img/wwjlogo.png"
-          alt="Winning with Jesus Logo"
-          height="10%"
-          width="10%"
-      /></a>
-      <a class="tabs" href="../about.html">About</a>
-      <a class="tabs" href="events.html">Events</a>
-      <a class="tabs" href="merchdonate.html">Merch/Donate</a>
-      <h3 class="title">A New Athlete: Sports Through Christianity</h3>
+      <h3 class="title">What is Winning With Jesus?</h3>
     </header>
 
     <p>What is Winning with Jesus?</p>
