--- a/merchdonate.html
+++ b/merchdonate.html
@@ -9,21 +9,33 @@
     initial-scale=1.0"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/vbp8mif.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/thb8axx.css" />
   </head>
 
   <body>
     <header>
-      <a href="index.html"
-        ><img
-          src="/img/wwjlogo.png"
-          alt="Winning with Jesus Logo"
-          height="10%"
-          width="10%"
-      /></a>
-      <a class="tabs" href="about.html">About</a>
-      <a class="tabs" href="events.html">Events</a>
-      <a class="tabs" href="../merchdonate.html">Merch/Donate</a>
-      <h3 class="title">A New Athlete: Sports Through Christianity</h3>
+      <div class="header-white">
+        <div class="logo-container">
+          <a href="/index.html">
+            <img
+              src="/img/wwjlogo.png"
+              alt="Winning with Jesus Logo"
+              class="logo"
+            />
+          </a>
+          <img
+            class="imgtitle"
+            src="/img/winningwithjesus.png"
+            alt="Winning with Jesus with cross as the T"
+          />
+        </div>
+        <a class="tabs" href="about.html">About</a>
+        <a class="tabs" href="events.html">Events</a>
+        <a class="tabs" href="../merchdonate.html">Merch/Donate</a>
+      </div>
+      <div class="header-gold"></div>
+      <h3 class="title">Available: T-Shirt, Totebag, Water Bottle, and Hat</h3>
     </header>
 
     <footer>
