--- a/about.html
+++ b/about.html
@@ -38,22 +38,29 @@
       <h3 class="title">What is Winning With Jesus?</h3>
     </header>
 
-    <p>What is Winning with Jesus?</p>
-    <p>
+    <p class="info">
       Learn more about your sport, and how faith impacts you as an athlete. From
       live concerts, bible studies, prayer walks, to a live sports
       demonstration, there are many events and activities planned for you. Join
-      us in our Christian Festival, December 8-10th,to develop yourself as a
+      us in our Christian Festival, December 8-10th, to develop yourself as a
       Christian Athlete.
     </p>
-    <p>
+    <img class="sdcc" src="/img/bible-study.png" alt="Group of individuals reading the bible">
+
+    <p class="partner">Proud Partners with Fellowship of Christian Athletes</p>
+    <a href="https://www.fca.org/">
+      <img class="partners" src="/img/FCA-Logo-II-New.png" alt="FCA logo">
+    </a>
+
+    <p class="proceeds">
       All proceeds will be donated to Fellowship of Christian Athletes to be
       disbursed with local churches and youth sports programs.
     </p>
 
     <footer>
+      <p>Winning with Jesus</p>
       <p>1600 Holloway Ave, San Francisco, CA 94132</p>
-      <a href="mailto:bconcepcion1@sfsu.edu">Sign up today!</a>
+      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">Sign up today!</a>
     </footer>
   </body>
 </html>
