--- a/events.html
+++ b/events.html
@@ -37,20 +37,25 @@
       <div class="header-gold"></div>
       <h3 class="title">3-Day Christian Festival: December 8th, 9th, and 10th</h3>
     </header>
-    <h4>DAY 1</h4>
-    <h5>Opening Worship - Brandon Lake and Elevation Worship</h5>
-    <h4>DAY 2</h4>
-    <h5>Giving back Expo - Donating and Receiving Athletic Necessities</h5>
-    <h5>Bible Study with Tim Tebow.</h5>
-    <h5>Live Demonstrations - Booths of different sports technique clinic.</h5>
-    <h4>DAY 3</h4>
-    <h5>
+    <h4 class="date">DAY 1</h4>
+    <h5 class="address">Opening Worship - Brandon Lake and Elevation Worship</h5>
+    <img src="/img/brandonlake.jpg" alt="Brandon Lake Singing">
+    <img src="/img/elevation.jpg" alt="Elevation Worship Group Photo">
+    <h4 class="date">DAY 2</h4>
+    <h5 class="address">Giving back Expo - Donating and Receiving Athletic Necessities</h5>
+    <h5 class="address">Bible Study with Tim Tebow.</h5>
+    <img src="/img/timtebow.jpg" alt="Tim Tebow preaching">
+    <h5 class="address">Live Demonstrations - Booths of different sports technique clinic.</h5>
+    <h4 class="date">DAY 3</h4>
+    <h5 class="address">
       Prayer Walk - FCA Paster to dinner and closing concert with Phil Wickham
     </h5>
+    <img src="/img/philwickham.jpg" alt="Phil Wickham Singing on stage">
 
     <footer>
+      <p>Winning with Jesus</p>
       <p>1600 Holloway Ave, San Francisco, CA 94132</p>
-      <a href="mailto:bconcepcion1@sfsu.edu">Sign up today!</a>
+      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">Sign up today!</a>
     </footer>
   </body>
 </html>
