--- a/index.html
+++ b/index.html
@@ -37,14 +37,23 @@
       <div class="header-gold"></div>
       <h3 class="title">A New Athlete: Sports Through Christianity</h3>
     </header>
+    <p class="date">FREE CHRISTIAN ATHLETE FESTIVAL</p>
+    <img class="imgsize-1" src="/img/neymar100.jpg" alt="100% Jesus Headband">
+    <img class="imgsize-2"src="/img/jordan love.jpg" alt="Jordan Love point to the Lord most high">
+    <img class="imgsize-3"src="/img/David-Carr.webp" alt="David Carr 100% Jesus">
 
-    <p>December 8, 9, and 10th!</p>
-    <p>San Diego Convention Center</p>
-    <p>111 Harbor Dr, San Diego, CA 92101</p>
+    <p class="date">Sponsored by faith!</p>
+    <p class="date">When? December 8, 9, and 10th!</p>
+    <p class="date">Where? San Diego Convention Center</p>
+    <p class="address">111 Harbor Dr, San Diego, CA 92101</p>
+    <a href="https://www.visitsandiego.com/"><img class="sdcc" src="/img/san-diego-convention-center-10--board-banner (2).jpg"
+      alt="San Diego Convention Center Website"></a>
+
 
     <footer>
+      <p>Winning with Jesus</p>
       <p>1600 Holloway Ave, San Francisco, CA 94132</p>
-      <a href="mailto:bconcepcion1@sfsu.edu">Sign up today!</a>
+      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">Sign up today!</a>
     </footer>
   </body>
 </html>
