--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class="logo-container">
           <a href="/index.html">
             <img
-              src="/img/wwjlogo.png"
+              src="img/wwjlogo.png"
               alt="Winning with Jesus Logo"
               class="logo"
             />
           </a>
           <img
             class="imgtitle"
-            src="/img/winningwithjesus.png"
+            src="img/winningwithjesus.png"
             alt="Winning with Jesus with cross as the T"
           />
         </div>
@@ -38,15 +38,15 @@
       <h3 class="title">A New Athlete: Sports Through Christianity</h3>
     </header>
     <p class="date">FREE CHRISTIAN ATHLETE FESTIVAL</p>
-    <img class="imgsize-1" src="/img/neymar100.jpg" alt="100% Jesus Headband">
-    <img class="imgsize-2"src="/img/jordan love.jpg" alt="Jordan Love point to the Lord most high">
-    <img class="imgsize-3"src="/img/David-Carr.webp" alt="David Carr 100% Jesus">
+    <img class="imgsize-1" src="img/neymar100.jpg" alt="100% Jesus Headband">
+    <img class="imgsize-2"src="img/jordan love.jpg" alt="Jordan Love point to the Lord most high">
+    <img class="imgsize-3"src="img/David-Carr.webp" alt="David Carr 100% Jesus">
 
     <p class="date">Sponsored by faith!</p>
     <p class="date">When? December 8, 9, and 10th!</p>
     <p class="date">Where? San Diego Convention Center</p>
     <p class="address">111 Harbor Dr, San Diego, CA 92101</p>
-    <a href="https://www.visitsandiego.com/"><img class="sdcc" src="/img/san-diego-convention-center-10--board-banner (2).jpg"
+    <a href="https://www.visitsandiego.com/"><img class="sdcc" src="img/san-diego-convention-center-10--board-banner (2).jpg"
       alt="San Diego Convention Center Website"></a>
 
 
