--- a/about.html
+++ b/about.html
@@ -19,14 +19,14 @@
         <div class="logo-container">
           <a href="/index.html">
             <img
-              src="/img/wwjlogo.png"
+              src="img/wwjlogo.png"
               alt="Winning with Jesus Logo"
               class="logo"
             />
           </a>
           <img
             class="imgtitle"
-            src="/img/winningwithjesus.png"
+            src="img/winningwithjesus.png"
             alt="Winning with Jesus with cross as the T"
           />
         </div>
@@ -45,11 +45,11 @@
       us in our Christian Festival, December 8-10th, to develop yourself as a
       Christian Athlete.
     </p>
-    <img class="sdcc" src="/img/bible-study.png" alt="Group of individuals reading the bible">
+    <img class="sdcc" src="img/bible-study.png" alt="Group of individuals reading the bible">
 
     <p class="partner">Proud Partners with Fellowship of Christian Athletes</p>
     <a href="https://www.fca.org/">
-      <img class="partners" src="/img/FCA-Logo-II-New.png" alt="FCA logo">
+      <img class="partners" src="img/FCA-Logo-II-New.png" alt="FCA logo">
     </a>
 
     <p class="proceeds">
