--- a/events.html
+++ b/events.html
@@ -19,14 +19,14 @@
         <div class="logo-container">
           <a href="/index.html">
             <img
-              src="/img/wwjlogo.png"
+              src="img/wwjlogo.png"
               alt="Winning with Jesus Logo"
               class="logo"
             />
           </a>
           <img
             class="imgtitle"
-            src="/img/winningwithjesus.png"
+            src="img/winningwithjesus.png"
             alt="Winning with Jesus with cross as the T"
           />
         </div>
@@ -39,18 +39,18 @@
     </header>
     <h4 class="date">DAY 1</h4>
     <h5 class="address">Opening Worship - Brandon Lake and Elevation Worship</h5>
-    <img src="/img/brandonlake.jpg" alt="Brandon Lake Singing">
-    <img src="/img/elevation.jpg" alt="Elevation Worship Group Photo">
+    <img src="img/brandonlake.jpg" alt="Brandon Lake Singing">
+    <img src="img/elevation.jpg" alt="Elevation Worship Group Photo">
     <h4 class="date">DAY 2</h4>
     <h5 class="address">Giving back Expo - Donating and Receiving Athletic Necessities</h5>
     <h5 class="address">Bible Study with Tim Tebow.</h5>
-    <img src="/img/timtebow.jpg" alt="Tim Tebow preaching">
+    <img src="img/timtebow.jpg" alt="Tim Tebow preaching">
     <h5 class="address">Live Demonstrations - Booths of different sports technique clinic.</h5>
     <h4 class="date">DAY 3</h4>
     <h5 class="address">
       Prayer Walk - FCA Paster to dinner and closing concert with Phil Wickham
     </h5>
-    <img src="/img/philwickham.jpg" alt="Phil Wickham Singing on stage">
+    <img src="img/philwickham.jpg" alt="Phil Wickham Singing on stage">
 
     <footer>
       <p>Winning with Jesus</p>
