--- a/merchdonate.html
+++ b/merchdonate.html
@@ -19,14 +19,14 @@
         <div class="logo-container">
           <a href="/index.html">
             <img
-              src="/img/wwjlogo.png"
+              src="img/wwjlogo.png"
               alt="Winning with Jesus Logo"
               class="logo"
             />
           </a>
           <img
             class="imgtitle"
-            src="/img/winningwithjesus.png"
+            src="img/winningwithjesus.png"
             alt="Winning with Jesus with cross as the T"
           />
         </div>
@@ -38,10 +38,10 @@
       <h3 class="title">Available: T-Shirt, Totebag, Water Bottle, and Hat</h3>
     </header>
 
-    <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="tshirt" src="/img/merchmockup1.png" alt="Graphic Tshirt"/></a>
-    <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="totebag" src="/img/merchmockup3.png" alt="Graphic Tote Bag"/></a>
-    <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="waterbottle" src="/img/merchmockup5.png" alt="Water bottle with WWJ logo"/></a>
-    <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="hat" src="/img/merchmockup6.png" alt="Hat with WWJ logo"/></a>
+    <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="tshirt" src="img/merchmockup1.png" alt="Graphic Tshirt"/></a>
+    <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="totebag" src="img/merchmockup3.png" alt="Graphic Tote Bag"/></a>
+    <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="waterbottle" src="img/merchmockup5.png" alt="Water bottle with WWJ logo"/></a>
+    <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="hat" src="img/merchmockup6.png" alt="Hat with WWJ logo"/></a>
 
     <footer>
       <p>Winning with Jesus</p>
