--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <header>
       <div class="header-white">
         <div class="logo-container">
-          <a href="/index.html">
+          <a href="index.html">
             <img
               src="img/wwjlogo.png"
               alt="Winning with Jesus Logo"
