--- a/merchdonate.html
+++ b/merchdonate.html
@@ -38,14 +38,16 @@
       <h3 class="title">Available: T-Shirt, Totebag, Water Bottle, and Hat</h3>
     </header>
 
+    <p class="address">Click item to purchase!</p>
+
     <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="tshirt" src="img/merchmockup1.png" alt="Graphic Tshirt"/></a>
     <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="totebag" src="img/merchmockup3.png" alt="Graphic Tote Bag"/></a>
     <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="waterbottle" src="img/merchmockup5.png" alt="Water bottle with WWJ logo"/></a>
     <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="hat" src="img/merchmockup6.png" alt="Hat with WWJ logo"/></a>
 
     <footer>
-      <p>Winning with Jesus</p>
       <p>1600 Holloway Ave, San Francisco, CA 94132</p>
+      <p>Winning with Jesus</p>
       <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">Sign up today!</a>
     </footer>
   </body>
