--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       us in our Christian Festival, December 8-10th, to develop yourself as a
       Christian Athlete.
     </p>
-    <img class="sdcc" src="img/bible-study.png" alt="Group of individuals reading the bible">
+    <img class="bible" src="img/bible-study.png" alt="Group of individuals reading the bible">
 
     <p class="partner">Proud Partners with Fellowship of Christian Athletes</p>
     <a href="https://www.fca.org/">
@@ -58,9 +58,8 @@
     </p>
 
     <footer>
-      <p>1600 Holloway Ave, San Francisco, CA 94132</p>
-      <p>Winning with Jesus</p>
-      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">Sign up today!</a>
+      <p>Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</p>
+      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">SIGN UP TODAY!</a>
     </footer>
   </body>
 </html>
