--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 
 
     <footer>
-      <p>1600 Holloway Ave, San Francisco, CA 94132</p>
-      <p>Winning with Jesus</p>
-      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">Sign up today!</a>
+      <p>Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</p>
+      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">SIGN UP TODAY!</a>
     </footer>
   </body>
 </html>
