--- a/merchdonate.html
+++ b/merchdonate.html
@@ -39,16 +39,23 @@
     </header>
 
     <p class="address">Click item to purchase!</p>
-
+    <p class="proceeds">
+      All proceeds will be donated to Fellowship of Christian Athletes to be
+      disbursed with local churches and youth sports programs.
+    </p>
+    <p class="price-1">$25</p>
+    
     <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="tshirt" src="img/merchmockup1.png" alt="Graphic Tshirt"/></a>
+    <p class="price-2">$15 $30 $10</p>
     <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="totebag" src="img/merchmockup3.png" alt="Graphic Tote Bag"/></a>
+   
     <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="waterbottle" src="img/merchmockup5.png" alt="Water bottle with WWJ logo"/></a>
+    
     <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="hat" src="img/merchmockup6.png" alt="Hat with WWJ logo"/></a>
 
     <footer>
-      <p>1600 Holloway Ave, San Francisco, CA 94132</p>
-      <p>Winning with Jesus</p>
-      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">Sign up today!</a>
+      <p>Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</p>
+      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">SIGN UP TODAY!</a>
     </footer>
   </body>
 </html>
