--- a/events.html
+++ b/events.html
@@ -37,25 +37,38 @@
       <div class="header-gold"></div>
       <h3 class="title">3-Day Christian Festival: December 8th, 9th, and 10th</h3>
     </header>
-    <h4 class="date">DAY 1</h4>
-    <h5 class="address">Opening Worship - Brandon Lake and Elevation Worship</h5>
-    <img src="img/brandonlake.jpg" alt="Brandon Lake Singing">
-    <img src="img/elevation.jpg" alt="Elevation Worship Group Photo">
-    <h4 class="date">DAY 2</h4>
-    <h5 class="address">Giving back Expo - Donating and Receiving Athletic Necessities</h5>
-    <h5 class="address">Bible Study with Tim Tebow.</h5>
-    <img src="img/timtebow.jpg" alt="Tim Tebow preaching">
-    <h5 class="address">Live Demonstrations - Booths of different sports technique clinic.</h5>
-    <h4 class="date">DAY 3</h4>
-    <h5 class="address">
-      Prayer Walk - FCA Paster to dinner and closing concert with Phil Wickham
-    </h5>
-    <img src="img/philwickham.jpg" alt="Phil Wickham Singing on stage">
+    <div class="day-container">
+      <div class="flex-item">
+        <h4 class="dayo">DAY 1</h4>
+        <p class="day">DECEMBER 8th</p>
+        <h5 class="address spacing">Opening Worship - Brandon Lake and Elevation Worship</h5>
+        <img class="brandon spacing" src="img/brandonlake.jpg" alt="Brandon Lake Singing">
+        <img class="elevation spacing" src="img/elevation.jpg" alt="Elevation Worship Group Photo">
+        <p class="spacing">Starting our Festival with Opening Worship led by Brandon Lake and Elevation Worship! Join us in singing and praising God in Hall H. </p>
+      </div>
+      <div class="flex-item">
+        <h4 class="dayo">DAY 2</h4>
+        <p class="day">DECEMBER 9th</p>
+        <h5 class="address spacing">- Giving back Expo - Donating and Receiving Athletic Necessities</h5>
+        <h5 class="address spacing">- Bible Study with Tim Tebow.</h5>
+        <img class="tim spacing" src="img/timtebow.jpg" alt="Tim Tebow preaching">
+        <h5 class="address spacing">- Live Demonstrations - Booths of different sports technique clinic.</h5>
+        <p class="spacing">Now dive deep into your faith and join us in a day full of being Christian. From giving, receiving, and learning ways to develop you as an athlete, all events held in Ballroom 20.</p>
+     </div>
+        <div class="flex-item">
+        <h4 class="dayo">DAY 3</h4>
+        <p class="day">DECEMBER 10th</p>
+        <h5 class="address spacing">
+        Prayer Walk - FCA Paster to dinner and closing concert with Phil Wickham
+        </h5>
+        <img class="phil spacing" src="img/philwickham.jpg" alt="Phil Wickham Singing on stage">
+        <p class="spacing">Closing our festival, join us in our prayer walk led by an FCA pastor to dinner with a closing concert by Phil Wickham in Hall H.</p>
+      </div>
+    </div>
 
     <footer>
-      <p>1600 Holloway Ave, San Francisco, CA 94132</p>
-      <p>Winning with Jesus</p>
-      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">Sign up today!</a>
+      <p>Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</p>
+      <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">SIGN UP TODAY!</a>
     </footer>
   </body>
 </html>
