--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="header-gold"></div>
       <h3 class="title">A New Athlete: Sports Through Christianity</h3>
     </header>
-    <p class="date">FREE CHRISTIAN ATHLETE FESTIVAL</p>
+    <p class="date date-1">FREE CHRISTIAN ATHLETE FESTIVAL</p>
     <img class="imgsize-1" src="img/neymar100.jpg" alt="100% Jesus Headband">
     <img class="imgsize-2"src="img/jordan love.jpg" alt="Jordan Love point to the Lord most high">
     <img class="imgsize-3"src="img/David-Carr.webp" alt="David Carr 100% Jesus">
