--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
     <footer>
-      <p>Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</p>
+      <a href="mailto:bconcepcion1@sfsu.edu">Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</a>
       <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">SIGN UP TODAY!</a>
     </footer>
   </body>
