--- a/merchdonate.html
+++ b/merchdonate.html
@@ -54,7 +54,7 @@
     <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7"><img class="hat" src="img/merchmockup6.png" alt="Hat with WWJ logo"/></a>
 
     <footer>
-      <p>Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</p>
+      <a href="mailto:bconcepcion1@sfsu.edu">Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</a>
       <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">SIGN UP TODAY!</a>
     </footer>
   </body>
