--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     </p>
 
     <footer>
-      <p>Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</p>
+      <a href="mailto:bconcepcion1@sfsu.edu">Winning with Jesus - 1600 Holloway Ave, San Francisco, CA 94132</a>
       <a href="https://forms.gle/dEw3VqQVzcqCkmHJ7">SIGN UP TODAY!</a>
     </footer>
   </body>
